[tracker3] fts syntax errors occur for searches with non-alphanumic characters
The tracker3 search backend raises an error if I search for 'banana.txt'; a popup appears as soon as I type the '.':
The same happens for other symbol characters. Also, typing just an empty space will trigger an FTS error popup.